--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,10 @@ body{
 .information{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    height: 400px;
+    gap: 50px;
+    height: 500px;
 }
 
 .informationTitle{
@@ -108,7 +109,7 @@ body{
 .illustration{
     display: flex;
     flex-direction: column;
-    width: 170px;
+    width: 150px;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -116,8 +117,79 @@ body{
 }
 
 .box{
-    border: 2px solid #3882f6;
-    height: 170px;
-    width: 170px;
+    border: 3px solid #3882f6;
+    height: 150px;
+    width: 150px;
     border-radius: 20px;
 }
+
+.quoteCard{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    background-color: #E5E7EB;
+}
+.quoteText{
+    display: flex;
+    width: 800px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1f2937;
+}
+
+.quoteSign{
+    display: flex;
+    justify-content: flex-end;
+    font-weight: 800;
+}
+
+.CtACard{
+    display: flex;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.CtA{
+    display: flex;
+    background-color: #3882F6;
+    justify-content: space-around;
+    align-items: center;
+    width: 900px;
+    height: 150px;
+    border-radius: 10px;
+    color: #E5E7EB;
+}
+
+.CtAText{
+    display: flex;
+    flex-direction: column;
+}
+
+.CtATitle{
+    font-size: 24px;
+    font-weight: 800;
+}
+
+.CtAButton{
+    background-color: #3882F6;
+    border-color: #E5E7EB;
+    color: #E5E7EB;
+    border: 2px solid #E5E7EB;
+    border-radius: 5px;
+    font-weight: 800;
+    width: 100px;
+    height: 30px;
+}
+
+.footer{
+    display: flex;
+    background-color: #1F2937;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    color: #E5E7EB;
+}
+
